--- a/InterviewAssessment.Data.Tests/InterviewAssessment.Data.Tests.csproj
+++ b/InterviewAssessment.Data.Tests/InterviewAssessment.Data.Tests.csproj
@@ -7,18 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Moq" Version="4.16.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InterviewAssessment.Data.Contract\InterviewAssessment.Data.Contract.csproj" />
     <ProjectReference Include="..\InterviewAssessment.Data\InterviewAssessment.Data.csproj" />
     <ProjectReference Include="..\InterviewAssessment.Domain\InterviewAssessment.Domain.csproj" />
-    <ProjectReference Include="..\InterviewAssessment\InterviewAssessment.csproj" />
   </ItemGroup>
 
 </Project>
