--- a/DomainModelEditor.WPF.Tests/DomainModelEditor.WPF.Tests.csproj
+++ b/DomainModelEditor.WPF.Tests/DomainModelEditor.WPF.Tests.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DomainModelEditor.Data\DomainModelEditor.Data.csproj" />
+    <ProjectReference Include="..\DomainModelEditor.Data.Abstractions\DomainModelEditor.Data.Abstractions.csproj" />
+    <ProjectReference Include="..\DomainModelEditor.Data\DomainModelEditor.Data.SqlServer.csproj" />
     <ProjectReference Include="..\DomainModelEditor.Domain\DomainModelEditor.Domain.csproj" />
     <ProjectReference Include="..\DomainModelEditor.WPF\DomainModelEditor.WPF.csproj" />
   </ItemGroup>
