--- a/DomainModelEditor.Api.Rest/DomainModelEditor.Api.Rest.csproj
+++ b/DomainModelEditor.Api.Rest/DomainModelEditor.Api.Rest.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DomainModelEditor.Data.Abstractions\DomainModelEditor.Data.Abstractions.csproj" />
+    <ProjectReference Include="..\DomainModelEditor.Data.SqlServer\DomainModelEditor.Data.SqlServer.csproj" />
     <ProjectReference Include="..\DomainModelEditor.Data\DomainModelEditor.Data.SqlServer.csproj" />
     <ProjectReference Include="..\DomainModelEditor.Domain\DomainModelEditor.Domain.csproj" />
     <ProjectReference Include="..\DomainModelEditor.Shared.Dto\DomainModelEditor.Shared.Dto.csproj" />
